tests/baselines/reference/privateNameFieldInitializer.errors.txt
tests/cases/conformance/classes/members/privateNames/privateNameFieldInitializer.ts(3,5): error TS7008: Member '#uninitialized' implicitly has an 'any' type.


==== tests/cases/conformance/classes/members/privateNames/privateNameFieldInitializer.ts (1 errors) ====
    class A {
        #field = 10;
        #uninitialized;
        ~~~~~~~~~~~~~~
!!! error TS7008: Member '#uninitialized' implicitly has an 'any' type.
    }
    